--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         
         <!-- CSS and icon site -->
         <link   rel="preload prefetch stylesheet"   href="static/main.css?cache=20.04.2023-v300-b14" as="style">
+        <link   rel="preload prefetch stylesheet"   href="static/colors.css?cache=20.04.2023-v300-b14" as="style">
         <link   rel="icon"                          href="static/g-icon.png?cache=20.04.2023-v300-b14">
         <link   rel="apple-touch-icon"              href="pwa-icon-apple.png?cache=20.04.2023-v300-b14">
 
@@ -70,6 +71,10 @@
             var siteBuild = '14'
 
             var DATESTATIC = new Date()
+            var SEASON = ''
+            let dec10 = new Date(DATESTATIC.getFullYear(), 11, 10), jan20 = new Date(DATESTATIC.getFullYear(), 0, 20), dec31 = new Date(DATESTATIC.getFullYear(), 11, 31), jan01 = new Date(DATESTATIC.getFullYear(), 0, 1)
+            if ((dec10 <= DATESTATIC && DATESTATIC <= dec31) || (jan01 <= DATESTATIC && DATESTATIC <= jan20)) { SEASON = 'newyear' }
+            else { if ([11, 0, 1].includes(DATESTATIC.getMonth())) SEASON = 'winter'; if ([2, 3, 4].includes(DATESTATIC.getMonth())) SEASON = 'spring'; if ([5, 6, 7].includes(DATESTATIC.getMonth())) SEASON = 'summer'; if ([8, 9, 10].includes(DATESTATIC.getMonth())) SEASON = 'autumn' }
 
             function addScript(src){ var script = document.createElement('script'); script.type = 'text/javascript'; script.src = src; script.async = false; document.head.appendChild(script) }
         </script>
@@ -112,21 +117,23 @@
                                         width: 100%;
                                     }
                                     .hdr { 
-                                        padding-bottom: 12px; 
+                                        height: 68px;
                                         display: flex; 
                                         flex-direction: row; 
-                                        flex-wrap: nowrap; 
-                                        align-items: flex-start; 
+                                        flex-wrap: nowrap;
+                                        align-items: center;
                                     }
                                 </style>
-                                <div style="height: 38px; width: 38px; z-index: 90; fill: currentColor; margin: 18px 0 0 12px; border-radius: 100px; cursor: pointer;">
+                                <div style="height: 38px; width: 38px; z-index: 90; fill: currentColor; margin: 0 0 0 12px; background: transparent; cursor: pointer; display: flex; align-items: center; justify-content: center;">
                                     ${settings.buttonBack ? 
                                     `<span onclick="history.back()" class="material-symbols-rounded icoGo" style="font-size: 32px !important;">arrow_back</span>` : ''}
                                 </div>
                                 <div style="margin-right: auto;"></div>
-                                <p style="text-align: center; font-size: 20px; margin-bottom: 8px; z-index: 10;" onclick="addScript('//cdn.jsdelivr.net/npm/eruda?t=${DATESTATIC.getTime()}'); eruda.init()">${settings.textCenter}</p>
+                                <p style="text-align: center; font-size: 32px; margin: 0; z-index: 10;" onclick="addScript('//cdn.jsdelivr.net/npm/eruda?t=${DATESTATIC.getTime()}'); eruda.init()">${settings.textCenter}</p>
+                                ${settings.addHeart ? `<div style="width: 8px;"></div>
+                                                       <img src="static/emoji/heart.png" height="32px" width="32px">` : ''}
                                 <div style="margin-right: auto;"></div>
-                                <div style="height: 38px; width: 38px; z-index: 90; fill: currentColor; margin: 18px 12px 0 0; border-radius: 100px; cursor: pointer;">
+                                <div style="height: 38px; width: 38px; z-index: 90; fill: currentColor; margin: 0 12px 0 0; background: transparent; cursor: pointer; display: flex; align-items: center; justify-content: center;">
                                 </div>
                             </div>
                             <hr style="border: none; height: 1px; margin-top: 0; margin-bottom: 0; background-color: var(--text-color); opacity: 0.2; width: calc(100% - 20px);">
@@ -188,9 +195,6 @@
                                 if (u2) return number + ' минута'
                                 if (u3) return number + ' минуты'
                                 break
-                            case 'minuteS':
-                                return number + ' мин.'
-                                break
                             case 'second':
                                 if (u1 || u4) return number + ' секунд'
                                 if (u2) return number + ' секунда'
@@ -240,7 +244,8 @@
                     <script>
                         UI.header({
                             textCenter: 'my cat',
-                            buttonBack: false
+                            buttonBack: false,
+                            addHeart: true
                         })
                     </script>
                 </div>
